--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
     "slate-react": "^0.95.0"
   },
   "devDependencies": {
